# icarus

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  compile.sh  compile_shaders.sh  compile_stb.sh  glm_test.cpp  shader.frag  shader.vert  test.c
.github/workflows/: ci.yml  rust.yml
assets/shaders/: shader.frag  shader.vert  simple.vert  snake.frag  snake.vert
examples/: dynamicuniformbuffer.rs  triangle.rs
src/: alsa.rs  blender.rs  color.rs  egl_sys.rs  gl_sys.rs  glx_sys.rs  glyph.rs  input.rs  lib.rs  macros.rs  main.rs  math.rs  parsing.rs  platform.rs  pulseaudio.rs  rand.rs  shaderc.rs  spirv.rs  stb_image.rs  string_util.rs  vk.rs  vk_example_base.rs  vk_sys.rs  vk_util.rs  wavefront_loader.rs  x11.rs  x11_sys.rs  xcb.rs  xcb_sys.rs
walk-the-dog/: Cargo.toml  package-lock.json  rustfmt.toml
walk-the-dog/src/: browser.rs  engine.rs  game.rs  lib.rs
walk-the-dog/static/: index.html
