# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
console_error_panic_hook = "0.1.7"
futures = "0.3.21"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
serde = { version = "1.0.131", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.57"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "KeyboardEvent",
    "Performance",
    "Response",
    "Window",
    "console",
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.30"
js-sys = "0.3.57"
